fix:  main view styling * add bg img * fix main button click navi router * add layout maxHeight * fix overflow ellipse

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -339,3 +339,10 @@ img {
 .swiper-slide.swiper-slide-active .final.ani_leftToRight > div:nth-child(3) {
   animation: leftToRight 5s 2.3s both;
 }
+
+.ellipse {
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
